--- a/src/dashboardNew/components/userModal/userModel.module.css
+++ b/src/dashboardNew/components/userModal/userModel.module.css
@@ -124,7 +124,7 @@
   align-items: center;
   justify-content: center;
   font-size: 1.2rem;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 
 .modalButtons {
